# ModernVulkan

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json
shaders/: CMakeLists.txt  graphics.glsl.frag  graphics.glsl.vert  graphics.vert.glsl
src/: application.cpp  application.h  camera.cpp  camera.h  input.cpp  input.h  keycodes.h  main.cpp
